# HeritageBot

./: README.md
.github/workflows/: opencode.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/services/: azure_client_factory.py  rag_engine.py
backend/data/: crawl_ingest.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Aurora.jsx  ChatInput.jsx  ChatMessage.jsx  ModelSelector.jsx  Sidebar.jsx
frontend/src/lib/: api.js
